--- a/themes/gophercon/static/css/main.css
+++ b/themes/gophercon/static/css/main.css
@@ -7,9 +7,11 @@ html {
     position: relative;
 }
 body {
-	background: none repeat scroll 0 0 #f6f2e1;
-	font-family: 'Ubuntu', sans-serif;
+	background: none repeat scroll 0 0 #f6f6f4;
+	font-family: 'Open Sans', 'Helvetica Neue', arial, sans-serif;
+  margin-top: 30px;
 	margin-bottom: 100px;
+  -webkit-font-smoothing: antialiased;
 }
 a {
     color: #40657c;
@@ -22,15 +24,26 @@ a {
 }
 .btn-orange {
     background-color: #f07332;
-	border: 4px solid #f9b575;
     color: #fff;
-	font-size: 18px;
+    font-size: 16px;
+    padding: 8px 16px;
 }
+
+.btn-orange:hover {
+  background-color: #d9682e;
+  color: #fff; 
+}
+
 .btn-blue {
     background-color: #4cc4ec;
-	border: 4px solid #5dadc8;
     color: #fff;
-	font-size: 18px;
+	  font-size: 16px;
+    padding: 8px 16px;
+}
+
+.btn-blue:hover {
+  background-color: #42aace;
+  color: #fff; 
 }
 
 /*-------------------- Header Styles --------------------*/
@@ -42,7 +55,7 @@ header .colors {
 	margin: 0;
 }
 header .colors div {
-	height: 10px;
+	height: 5px;
 }
 header .colors .col-md-2 {
 	-webkit-animation-duration: 0.5s;
@@ -125,6 +138,7 @@ header .header-content .col-md-3 {
 }
 header .header-content .col-md-3 h3 {
 	color: #40657c;
+  font-size: 26px;
 	text-shadow: 0px 1px 0px #FFFFFF;
 }
 header .header-content .col-md-3 p {
@@ -134,6 +148,7 @@ header .header-content .col-md-3 p {
 }
 header .header-content .tickets-section {
 	text-align: right;
+  margin-top: 160px;
 }
 header .header-content .speaker-section {
 	text-align: left;
@@ -168,36 +183,77 @@ header .color-bar {
     z-index: 1;
     width: 100%;
 }
-header nav {
-	background: rgba(93,93,93,0.1);
-	border-bottom: 1px solid rgba(93,93,93,0.2);
-	border-top: 1px solid #FFFFFF;
-	box-shadow: 0px -1px 0px #FFFFFF inset, 0px 1px 0px rgba(93,93,93,0.2) inset;
-	position: relative;
+header .navbar-default {
+  background-color: transparent;
+  border: none;
+
+  -moz-transition: all 0.5s ease-in;
+  -webkit-transition: all 0.5s ease-in;
+  -o-transition: all 0.5s ease-in;
+  transition: all 0.5s ease-in;
 }
-header nav .logo-small {
-    cursor: pointer;
-    display: block;
-    left: 50%;
-    margin-left: -125px;
-    position: absolute;
-    top: 40px;
-    width: 250px;
-    z-index: 200;
+
+header .navbar-default.scrolled, header .navbar-collapse.in {
+  background-color: #f6f6f4;
+  -moz-transition: all 0.5s ease-in;
+  -webkit-transition: all 0.5s ease-in;
+  -o-transition: all 0.5s ease-in;
+  transition: all 0.5s ease-in;
 }
-header nav ul {
-	display: block;
-	text-align: center;
-	overflow: hidden;
-	margin: 0;
-	padding: 0;
+
+header .navbar-nav > li > a {
+  color: #40657c !important;
+  font-size: 13px;
+  font-weight: 600;
+  padding-bottom: 10px;
+  padding-top: 30px;
+
+  -moz-transition: all 0.5s ease-in;
+  -webkit-transition: all 0.5s ease-in;
+  -o-transition: all 0.5s ease-in;
+  transition: all 0.5s ease-in;
 }
-header nav ul li {
-	color: #40657c;
-	display: inline-block;
-	text-align: center;
-	padding: 10px 20px 30px;
+header .navbar-default .navbar-nav>.open>a, .navbar-default .navbar-nav>.open>a:focus, .navbar-default .navbar-nav>.open>a:hover {
+  background-color: #eee;
 }
+
+.dropdown-menu {
+  background-color: #eee;
+  border: none;
+  color: #40657c;
+  box-shadow: none;
+  -webkit-box-shadow: none;
+}
+
+.dropdown-toggle span.caret {
+  margin-left: 10px;
+}
+
+
+header .navbar-nav > li > a:hover {
+  color: #333 !important;
+}
+
+header .scrolled .navbar-nav > li > a, header .navbar-collapse.in .navbar-nav > li > a {
+  padding-bottom: 20px;
+  padding-top: 20px;
+
+  -moz-transition: all 0.5s ease-in;
+  -webkit-transition: all 0.5s ease-in;
+  -o-transition: all 0.5s ease-in;
+  transition: all 0.5s ease-in;
+}
+
+
+header .scrolled .navbar-nav > li:hover, header .navbar-collapse.in .navbar-nav > li:hover {
+  background-color: #eee;
+
+  -moz-transition: all 0.5s ease-in;
+  -webkit-transition: all 0.5s ease-in;
+  -o-transition: all 0.5s ease-in;
+  transition: all 0.5s ease-in;
+}
+
 header .header-content .interior-header {
 	text-align: center;
 }
