fix navigation on internal pages

--- a/themes/gophercon/layouts/partials/header.html
+++ b/themes/gophercon/layouts/partials/header.html
@@ -18,27 +18,42 @@
 	<body>
 
 		<header>
-			<div class="row colors">
-				<div class="col-md-2 animated slideInDown"></div>
-				<div class="col-md-2 animated slideInDown"></div>
-				<div class="col-md-2 animated slideInDown"></div>
-				<div class="col-md-2 animated slideInDown"></div>
-				<div class="col-md-2 animated slideInDown"></div>
-				<div class="col-md-2 animated slideInDown"></div>
-			</div>
-			<nav>
-				<ul>
-					<li><a href="/">Home</a></li>
-					<li><a href="/about">About</a></li>
-					<li><a href="/sponsors">Sponsors</a></li>
-					<!--	<li><a href="/2015/schedule">Schedule</a></li> -->
-					<li><a href="/news">News</a></li>
-					<li><a href="/code-of-conduct">Code of conduct</a></li>
-				</ul>
-				<a class="logo-small animated slideInDown" href="/">
-					<img src="/images/gophercon-small.svg" alt="GopherCon 2015" title="GopherCon 2015" />
-				</a>
-			</nav>
+      <nav id="top-nav" class="navbar navbar-default navbar-fixed-top">
+        <div class="row colors">
+          <div class="col-md-2 animated slideInDown"></div>
+            <div class="col-md-2 animated slideInDown"></div>
+            <div class="col-md-2 animated slideInDown"></div>
+            <div class="col-md-2 animated slideInDown"></div>
+            <div class="col-md-2 animated slideInDown"></div>
+            <div class="col-md-2 animated slideInDown"></div>
+        </div>
+        <div class="container">
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="/">
+              <img src="/images/gophercon-small.svg" alt="GopherCon 2015" title="GopherCon 2015" height="30" />
+            </a>
+          </div>
+
+          <div class="collapse navbar-collapse navbar-right" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+              <li><a href="/about">ABOUT</a></li>
+              <li><a href="/sponsors">SPONSORS</a></li>
+              <!--<li><a href="/2015/schedule">SCHEDULE</a></li> -->
+              <li class="dropdown">
+                <a href="/news">NEWS</a>
+              </li>
+              <li><a href="/code-of-conduct">CODE OF CONDUCT</a></li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+
 			<div class="header-content">
 				<div class="container">
 					<div class="row">
