css changes should go to static not public

--- a/themes/gophercon/layouts/partials/footer.html
+++ b/themes/gophercon/layouts/partials/footer.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <p>© 2015 GopherAcademy, LLC</p>
+                <p class="copyright">© 2015 GopherAcademy, LLC</p>
                 <p>The Gopher character is based on the Go mascot designed by
                 <a href="http://reneefrench.blogspot.com/" target="blank">Renée French</a>
                 and copyrighted under the
