--- a/themes/gophercon/static/css/main.css
+++ b/themes/gophercon/static/css/main.css
@@ -4,13 +4,11 @@
 html {
     font-size: 10px;
     min-height: 100%;
-    position: relative;
 }
 body {
-	background: none repeat scroll 0 0 #f6f6f4;
+	background: none repeat scroll 0 0 #fff;
 	font-family: 'Open Sans', 'Helvetica Neue', arial, sans-serif;
   margin-top: 30px;
-	margin-bottom: 100px;
   -webkit-font-smoothing: antialiased;
 }
 a {
@@ -148,9 +146,9 @@ header .header-content .col-md-3 p {
 }
 header .header-content .tickets-section {
 	text-align: right;
-  margin-top: 160px;
 }
 header .header-content .speaker-section {
+  margin-top: 160px;
 	text-align: left;
 }
 header .header-content .col-md-6 section.countdown {
@@ -184,7 +182,7 @@ header .color-bar {
     width: 100%;
 }
 header .navbar-default {
-  background-color: transparent;
+  background-color: #f6f6f4;
   border: none;
 
   -moz-transition: all 0.5s ease-in;
@@ -229,6 +227,16 @@ header .navbar-default .navbar-nav>.open>a, .navbar-default .navbar-nav>.open>a:
   margin-left: 10px;
 }
 
+section.content {
+  padding-bottom: 15px;
+  padding-top: 15px;
+}
+
+section.content h1 {
+  font-size: 28px;
+  color: #333;
+  font-weight: 600;
+}
 
 header .navbar-nav > li > a:hover {
   color: #333 !important;
@@ -274,24 +282,43 @@ header .header-content .interior-header p {
 
 /*-------------------- Event Dates Styles --------------------*/
 .event-dates {
-	background:#b3ad9f;
+	background:#40657c;
 	padding: 0 0 0 0;	
 }
-.event-dates .col-md-3 .back-border {
-	text-align: center;
-	border-bottom: 5px solid #918977;
-	border-radius: 10px;
-	padding: 25px;
-	margin: 80px 10px;
-	font-family: lato;
-	background: #ffffff;
-	color: #5b5b5b;
-	min-height: 210px;
+.event-date {
+  background: #fff;
+  color: #333;
 }
-.event-date-orange, .event-date-blue{
-	margin-top: -80px;
-	position: relative;
+
+.event-date h4 {
+  font-size: 16px;
+  margin-bottom: 0px;
+  padding: 0px 25px;
 }
+
+.event-date h4 strong {
+  font-size: 20px;
+  font-weight: 600;
+}
+
+.event-date p {
+  min-height: 120px;
+  padding: 10px 25px 0px 25px;
+}
+
+.event-date-orange, .event-date-blue {
+  background-color: #fff;
+  padding: 25px;
+}
+
+.event-date-orange {
+  background: #b3ad9f;
+}
+
+.event-date-blue {
+  background: #4cc4ec;
+}
+
 .event-date-orange h3 span, .event-date-blue h3 span{
 	font-weight: 800;
 }
@@ -300,7 +327,7 @@ header .header-content .interior-header p {
     letter-spacing: 2px;
     position: relative;
     z-index: 3;
-    margin: 0px 0px 15px;
+    margin: 0px;
 }
 .event-date-orange h3 span, .event-date-blue h3 span{
 	font-size: 40px;
@@ -325,11 +352,8 @@ header .header-content .interior-header p {
 /*-------------------- Main Styles --------------------*/
 
 .main-info{
-    background:#b3ad9f;
+    background:#40657c;
 	position: relative;
-}
-.main-info .container .row{
-	margin-top: 80px;
 }
 .main-info .container .col-md-10 {
 	color: #ffffff;
@@ -350,10 +374,9 @@ header .header-content .interior-header p {
 }
 main .container .col-md-10 p {
 	color: #4c4c4c;
-    font-size: 22px;
+  font-size: 18px;
 	font-weight: 300;
-	line-height: 30px;
-	margin: 0 0 30px 0;
+	margin: 15px 0 60px 0;
 }
 main .row {
 	margin: 0 auto;
@@ -378,7 +401,6 @@ main .row {
 }
 main .sponsors {
 	background: none repeat scroll 0 0 #ffffff;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     margin: 0;
     padding: 0;
     position: relative;
@@ -426,7 +448,6 @@ main .sponsors a {
     padding: 30px 25px 10px;
 }
 main .sponsors .col-md-12 {
-	box-shadow: 0 5px 5px rgba(0, 0, 0, 0.05);
     margin-bottom: 0;
     padding: 15px;
 }
@@ -481,12 +502,8 @@ main .home-sponsors .sponsor-title {
 }
 main .home-sponsors {
 	background: none repeat scroll 0 0 #ffffff;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    margin: 0;
-    padding: 0;
-    position: relative;
-    z-index: 2;
 }
+
 main .home-sponsors .title {
 	background: none repeat scroll 0 0 #f27423;
     color: #ffffff;
@@ -527,11 +544,10 @@ main .home-sponsors a img {
 	text-align:center;
 }
 main .home-sponsors a {
-    padding: 10px 40px;
+    padding: 10px;
 }
 main .home-sponsors .col-md-12 {
     margin-bottom: 0;
-    padding: 0 50px;
 }
 
 /*-- diamond styles --*/
@@ -585,7 +601,6 @@ main .home-sponsors .bronze a {
 /*-------------------- Generic Styles --------------------*/
 .generic {
 	background: #FFFFFF;
-	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 	padding: 60px 30px;
 	position: relative;
 	z-index: 2;
@@ -621,13 +636,18 @@ main .home-sponsors .bronze a {
 .hotels hr {
 	border-color: #CCCCCC;
 }
+
+.hotels .btn {
+  font-size: 12px;
+}
+
 main .hotels .col-md-2 {
     height: 400px;
     padding: 0;
     position: relative;
     width: 20%;
-	box-shadow: -2px 2px 5px rgba(0,0,0,0.3);
 }
+
 main .hotels .embassy {
 	background: url("../images/embassy.jpg") repeat scroll bottom rgba(0, 0, 0, 0);
 }
@@ -671,17 +691,19 @@ main .hotels .col-md-2 section p:nth-child(n+2) {
 	color: #e1e1e1;
 }
 footer {
-    background: none repeat scroll 0 0 #5d5d5d;
-    bottom: 0;
-    color: #ffffff;
-	height: 100px;
-    overflow: hidden;
-    padding: 20px;
-    position: absolute;
-    width: 100%;
+    background: #f6f6f4;
+    font-size: 11px;
+    padding: 25px;
 }
-footer a{
-	color: #f07332;
+footer a {
+	color: #40657c;
+  font-size: 11px;
+}
+
+footer .copyright {
+  font-size: 16px;
+  margin-bottom: 0px;
+  padding-top: 15px;
 }
 
 /*---------------------------------------- Responsive Styles Start ---------------------------------------- */
