--- a/themes/gophercon/static/css/main.css
+++ b/themes/gophercon/static/css/main.css
@@ -631,6 +631,7 @@ main .home-sponsors .bronze a {
 
 /*-------------------- Hotel Styles --------------------*/
 .hotels {
+  background: #f6f6f4;
 	margin: 50px 0 0 0;
 }
 .hotels hr {
