use small logo in header area not navbar

--- a/themes/gophercon/layouts/partials/header.html
+++ b/themes/gophercon/layouts/partials/header.html
@@ -35,9 +35,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/">
-              <img src="/images/gophercon-small.svg" alt="GopherCon 2015" title="GopherCon 2015" height="30" />
-            </a>
+            <a class="navbar-brand" href="#"></a>
           </div>
 
           <div class="collapse navbar-collapse navbar-right" id="bs-example-navbar-collapse-1">
@@ -58,6 +56,8 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-md-8 col-md-offset-2 interior-header">
+
+              <img src="/images/gophercon-small.svg" alt="GopherCon 2015" title="GopherCon 2015" width="300" />
 							<h1>Gophers of the world, Unite!</h1>
 							<p>GopherCon 2015 will be the largest gathering of Go developers ever. </p>
 						</div><!-- col-md-8 -->
