--- a/themes/gophercon/layouts/index.html
+++ b/themes/gophercon/layouts/index.html
@@ -20,39 +20,7 @@
 <body>
 
 <header>
-  <nav id="top-nav" class="navbar navbar-default navbar-fixed-top">
-    <div class="row colors">
-      <div class="col-md-2 animated slideInDown"></div>
-        <div class="col-md-2 animated slideInDown"></div>
-        <div class="col-md-2 animated slideInDown"></div>
-        <div class="col-md-2 animated slideInDown"></div>
-        <div class="col-md-2 animated slideInDown"></div>
-        <div class="col-md-2 animated slideInDown"></div>
-    </div>
-    <div class="container">
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="#"></a>
-      </div>
-
-      <div class="collapse navbar-collapse navbar-right" id="bs-example-navbar-collapse-1">
-        <ul class="nav navbar-nav">
-          <li><a href="/about">ABOUT</a></li>
-          <li><a href="/sponsors">SPONSORS</a></li>
-          <!--<li><a href="/2015/schedule">SCHEDULE</a></li> -->
-          <li class="dropdown">
-            <a href="/news">NEWS</a>
-          </li>
-          <li><a href="/code-of-conduct">CODE OF CONDUCT</a></li>
-        </ul>
-      </div>
-    </div>
-  </nav>
+  {{ partial "navbar.html" . }}
 
 	<div class="header-content">
     	<div class="container">
