Add sponsorship prospectus to navigation

--- a/themes/gophercon/layouts/partials/navbar.html
+++ b/themes/gophercon/layouts/partials/navbar.html
@@ -21,7 +21,13 @@
     <div class="collapse navbar-collapse navbar-right" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li><a href="/about">ABOUT</a></li>
-        <li><a href="/sponsors">SPONSORS</a></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">SPONSORS <span class="caret"></span></a>
+          <ul class="dropdown-menu" role="menu">
+            <li><a href="/sponsors">GopherCon Sponsors</a></li>
+            <li><a href="/Gophercon2015Prospectus.pdf">Sponsorship Prospectus</a></li>
+          </ul>
+        </li>
         <!--<li><a href="/2015/schedule">SCHEDULE</a></li> -->
         <li class="dropdown">
           <a href="/news">NEWS</a>
