--- a/themes/gophercon/layouts/partials/navbar.html
+++ b/themes/gophercon/layouts/partials/navbar.html
@@ -20,7 +20,13 @@
 
     <div class="collapse navbar-collapse navbar-right" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><a href="/about">ABOUT</a></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">ABOUT <span class="caret"></span></a>
+          <ul class="dropdown-menu" role="menu">
+            <li><a href="/about">About GopherCon</a></li>
+            <li><a href="/code-of-conduct">Code of Conduct</a></li>
+          </ul>
+        </li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">SPONSORS <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
@@ -28,11 +34,17 @@
             <li><a href="/Gophercon2015Prospectus.pdf">Sponsorship Prospectus</a></li>
           </ul>
         </li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">EVENTS <span class="caret"></span></a>
+          <ul class="dropdown-menu" role="menu">
+            <li><a href="/events">Events</a></li>
+            <li><a href="/events/after-party">After Party</a></li>
+          </ul>
+        </li>
         <!--<li><a href="/2015/schedule">SCHEDULE</a></li> -->
         <li class="dropdown">
           <a href="/news">NEWS</a>
         </li>
-        <li><a href="/code-of-conduct">CODE OF CONDUCT</a></li>
       </ul>
     </div>
   </div>
