cleanup additional page layouts for consistency

--- a/themes/gophercon/layouts/speakers/single.html
+++ b/themes/gophercon/layouts/speakers/single.html
@@ -1,9 +1,9 @@
 {{ partial "header.html" . }}
 
-<main>
+<main class="container generic">
 
     <section class="row"> 
-		<div class="generic col-md-9">
+		<div class="col-md-8">
 			<div class="well">
 			<div class="row">
 				<div class="col-md-5">
