--- a/themes/gophercon/layouts/news/single.html
+++ b/themes/gophercon/layouts/news/single.html
@@ -1,9 +1,9 @@
 {{ partial "header.html" . }}
 
-<main>
+<main class="container generic">
 
     <section class="row"> 
-		<div class="generic col-md-9">
+		<div class="col-md-8">
 			<h2> {{ .Title }} </h2><small>{{ dateFormat "Monday, Jan 2, 2006" .Date }}</small>
 					<br/>
             {{ .Content }}
