--- a/themes/gophercon/layouts/section/news.html
+++ b/themes/gophercon/layouts/section/news.html
@@ -3,11 +3,11 @@
 
 <main class="container generic">
     <section class="row"> 
-		<div class="generic col-md-9">
-			<h3>GopherCon News</h3>
+		<div class="col-md-8">
+			<h2>GopherCon News</h2>
 			{{ range .Paginator.Pages }}
 		
-				<h4><a href="{{ .RelPermalink }}">{{ .Title }}</a></h4>
+				<h3><a href="{{ .RelPermalink }}">{{ .Title }}</a></h3>
 				<small>{{ dateFormat "Monday, Jan 2, 2006" .Date }}</small><br/><br/>
 				{{ .Summary }}
 				{{ if .Truncated }} <br/><br/>
