--- a/themes/gophercon/layouts/sponsor/single.html
+++ b/themes/gophercon/layouts/sponsor/single.html
@@ -1,15 +1,15 @@
 {{ partial "header.html" . }}
 {{ $baseurl := .Site.BaseUrl }}
 
-<main>
+<main class="container generic">
     <section class="row"> 
-    	<div class="sponsors col-md-9">
+    	<div class="sponsors col-md-8">
 
 			{{ if eq "diamond"  .Params.sponsorclass}}
         	<!---------- Diamond Sponsors ---------->
             <div class="col-md-12 diamond">
             	<img class="icon" src="/images/diamond.png" />
-                <h3>Diamond Sponsors</h3>
+                <h3>Diamond Sponsors</h4>
 				<a href="{{.Params.site}}"><img src="{{.Params.logo}}" /></a>
 				<p>{{ .Content }}</p>
                 <div class="clearfix"></div>
@@ -19,7 +19,7 @@
 			<!---------- Platinum Sponsors  -->
             <div class="col-md-12 platinum">
             	<img class="icon" src="/images/platinum.png" />
-                <h3>Platinum Sponsors</h3>
+                <h4>Platinum Sponsors</h4>
 				<a href="{{.Params.site}}"><img src="{{.Params.logo}}"/></a>
 				<p>{{ .Content }}</p>
                 <div class="clearfix"></div>
