--- a/themes/gophercon/layouts/taxonomy/sponsor.html
+++ b/themes/gophercon/layouts/taxonomy/sponsor.html
@@ -1,6 +1,6 @@
 {{ partial "header.html" . }}
 
-<main>
+<main class="container generic">
     <section class="row"> 
     	<div class="sponsors col-md-9">
         	{{ range .Data.Pages }}
