Add ticket and hotel registration to navbar

--- a/themes/gophercon/layouts/index.html
+++ b/themes/gophercon/layouts/index.html
@@ -201,7 +201,7 @@
 
   {{ partial "sponsors.html" . }}
 
-  <section class="content hotels">
+  <section id="hotels" class="content hotels">
     	<div class="container">
         	<div class="col-md-10 col-md-offset-1 text-center">
                 <h1>Hotels</h1>
