--- a/themes/gophercon/layouts/partials/navbar.html
+++ b/themes/gophercon/layouts/partials/navbar.html
@@ -41,6 +41,13 @@
             <li><a href="/events/after-party">After Party</a></li>
           </ul>
         </li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">REGISTRATION <span class="caret"></span></a>
+          <ul class="dropdown-menu" role="menu">
+            <li><a href="https://ti.to/gophercon/gophercon-2015">Book Tickets</a></li>
+            <li><a href="/#hotels">Hotels</a></li>
+          </ul>
+        </li>
         <!--<li><a href="/2015/schedule">SCHEDULE</a></li> -->
         <li class="dropdown">
           <a href="/news">NEWS</a>
