don't show sponsors on sponsors page

--- a/themes/gophercon/layouts/_default/list.html
+++ b/themes/gophercon/layouts/_default/list.html
@@ -15,5 +15,7 @@
         {{ partial "sidebar.html" . }}
     </section>
 </main>
-
+<main>
+  {{ partial "sponsors.html" . }}
+</main>
 {{ partial "footer.html" . }}
