--- a/themes/gophercon/layouts/speakers/single.html
+++ b/themes/gophercon/layouts/speakers/single.html
@@ -26,4 +26,7 @@
     </section>
 </main>
 
-{{ partial "footer.html" . }}{ partial "interior-footer.html" . }}
+<main>
+  {{ partial "sponsors.html" . }}
+</main>
+{{ partial "footer.html" . }}
