--- a/themes/gophercon/layouts/sponsor/single.html
+++ b/themes/gophercon/layouts/sponsor/single.html
@@ -57,4 +57,8 @@
         {{ partial "sidebar.html" . }}
     </section>
 </main>
+
+<main>
+  {{ partial "sponsors.html" . }}
+</main>
 {{ partial "footer.html" . }}
