Adding speakers, keynotes, workshop links to navbar

--- a/themes/gophercon/layouts/index.html
+++ b/themes/gophercon/layouts/index.html
@@ -134,7 +134,7 @@
     </div>
   </section>
   
-  <section class="content keynotes">
+  <section id="keynotes" class="content keynotes">
     	<div class="container">
         	<div class="col-md-10 col-md-offset-1 text-center">
                 <h1>Keynote Speakers</h1>
