--- a/themes/gophercon/layouts/partials/navbar.html
+++ b/themes/gophercon/layouts/partials/navbar.html
@@ -35,6 +35,14 @@
           </ul>
         </li>
         <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">SCHEDULE <span class="caret"></span></a>
+          <ul class="dropdown-menu" role="menu">
+            <li><a href="/workshops">Workshops</a></li>
+            <li><a href="/#keynotes">Keynotes</a></li>
+            <li><a href="/speakers">Speakers</a></li>
+          </ul>
+        </li>
+        <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">EVENTS <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
             <li><a href="/events">Events</a></li>
