--- a/themes/gophercon/layouts/taxonomy/sponsor.terms.html
+++ b/themes/gophercon/layouts/taxonomy/sponsor.terms.html
@@ -5,46 +5,74 @@
     <section class="row"> 
 		<div class="sponsors col-md-12">
 			<div class="col-md-12 diamond">
-                <h3>DIAMOND SPONSORS</h3>
+        <h3>DIAMOND SPONSORS</h3>
 				<img class="icon" src="/images/diamond.png" />
-	  			{{ range .Site.Taxonomies.sponsors.diamond}}
-				<a href="{{.Page.Permalink}}"><img src="{{ .Page.Params.logo }}"></img></a>
+        {{ range .Site.Taxonomies.sponsors.diamond}}
+          <div class="row">
+            <div class="col-md-3">
+              <a href="{{.Page.Permalink}}"><img src="{{ .Page.Params.logo }}" /></a>
+            </div>
+            <div class="col-md-9">
+              <p>{{.Page.Content}}</p>
+            </div>
+          </div>
 				{{ end }}
-                <div class="clearfix"></div>
 			</div>
 			<div class="col-md-12 platinum">
-                <h3>PLATINUM SPONSORS</h3>
+        <h3>PLATINUM SPONSORS</h3>
 				<img class="icon" src="/images/platinum.png" />
-	  			{{ range .Site.Taxonomies.sponsors.platinum}}
-				<a href="{{.Page.Permalink}}"><img src="{{ .Page.Params.logo }}"></img></a>
+        {{ range .Site.Taxonomies.sponsors.platinum}}
+          <div class="row">
+            <div class="col-md-3">
+              <a href="{{.Page.Permalink}}"><img src="{{ .Page.Params.logo }}" /></a>
+            </div>
+            <div class="col-md-9">
+              <p>{{.Page.Content}}</p>
+            </div>
+          </div>
 				{{ end }}
-&nbsp;<br/><br/>
-                <div class="clearfix"></div>
 			</div>
 			<div class="col-md-12 gold">
-                <h3>GOLD SPONSORS</h3>
+        <h3>GOLD SPONSORS</h3>
 				<img class="icon" src="/images/gold.png" />
-	  			{{ range .Site.Taxonomies.sponsors.gold}}
-				<a href="{{.Page.Permalink}}"><img src="{{ .Page.Params.logo }}"></img></a>
-
+        {{ range .Site.Taxonomies.sponsors.gold}}
+          <div class="row">
+            <div class="col-md-3">
+              <a href="{{.Page.Permalink}}"><img src="{{ .Page.Params.logo }}" /></a>
+            </div>
+            <div class="col-md-9">
+              <p>{{.Page.Content}}</p>
+            </div>
+          </div>
 				{{ end }}
-                <div class="clearfix"></div>
 			</div>
 			<div class="col-md-12 silver">
-                <h3>SILVER SPONSORS</h3>
+        <h3>SILVER SPONSORS</h3>
 				<img class="icon" src="/images/silver.png" />
-	  			{{ range .Site.Taxonomies.sponsors.silver}}
-				<a href="{{.Page.Permalink}}"><img src="{{ .Page.Params.logo }}"></img></a>
+        {{ range .Site.Taxonomies.sponsors.silver}}
+          <div class="row">
+            <div class="col-md-3">
+              <a href="{{.Page.Permalink}}"><img src="{{ .Page.Params.logo }}" /></a>
+            </div>
+            <div class="col-md-9">
+              <p>{{.Page.Content}}</p>
+            </div>
+          </div>
 				{{ end }}
-                <div class="clearfix"></div>
 			</div>
 			<div class="col-md-12 bronze">
 				<img class="icon" src="/images/bronze.png" />
-                <h3>BRONZE SPONSORS</h3>
-	  			{{ range .Site.Taxonomies.sponsors.bronze}}
-				<a href="{{.Page.Permalink}}"><img src="{{ .Page.Params.logo }}"></img></a>
+        <h3>BRONZE SPONSORS</h3>
+        {{ range .Site.Taxonomies.sponsors.bronze}}
+          <div class="row">
+            <div class="col-md-3">
+              <a href="{{.Page.Permalink}}"><img src="{{ .Page.Params.logo }}" /></a>
+            </div>
+            <div class="col-md-9">
+              <p>{{.Page.Content}}</p>
+            </div>
+          </div>
 				{{ end }}
-                <div class="clearfix"></div>
 			</div>
 
         </div><!-- sponsors col-md-10 -->
